--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,8 @@
 {
-  "cleanUrls": true
+  "routes": [
+    {
+      "src": "/noc/Ecertificate",
+      "dest": "/noc/Ecertificate/index.html"
+    }
+  ]
 }
